test: compare against the arbitrary graph, and cover loops and chain depth
The fixed point assertion recomputed the shadow variables by
SolutionManager#updateShadowVariables, which builds the very graph under test,
so it compared the block graph against itself. It now recomputes the built-in
shadow variables that way and the declarative ones by an explicitly arbitrary
graph, making the reference independent of the graph being tested.

Two domains join the existing ones. Vehicles chained by a planning variable
can be put in a dependency loop the solver can break again, which covers the
block node marking a whole route inconsistent and recovering from it; the
route of a vehicle whose endTime is sourced from its visits alone covers the
ordering the block node's edges supply, a loop closing through a route, and
the update giving up on a structurally flawed solution.

The counter test grows a chain of vehicles: appending a visit to the head
recomputes every downstream supplier exactly once, whether or not the
vehicles' endTime reads their own previousEndTime, and building the graph
walks each route twice whatever its position in the chain.

The head vehicles' fact collection is now null rather than empty, which
removes the shadow variable pre-initialization that hid a supplier call from
the counters, and the elements that read their vehicle's pre-chain variable
directly are no longer called rebasing, which collides with Move#rebase.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>