@@ -16,8 +16,12 @@ import ai.timefold.solver.core.testdomain.TestdataObject;
 @PlanningEntity
 public class TestdataMultiEntityChainVehicle extends TestdataObject {
 
-    List<TestdataMultiEntityChainVehicle> previousVehicles = new ArrayList<>();
+    // Null for a head vehicle, exercising null fact collection support.
+    List<TestdataMultiEntityChainVehicle> previousVehicles;
     int departureTime;
+    // A vehicle cannot finish before it starts. Unlike the plain last visit's end time,
+    // this makes endTime change as soon as previousEndTime does, before the chain has been walked.
+    boolean endTimeIncludesPreviousEndTime = false;
 
     @PlanningListVariable(allowsUnassignedValues = true)
     List<TestdataMultiEntityChainVisit> visits = new ArrayList<>();
@@ -37,15 +41,15 @@ public class TestdataMultiEntityChainVehicle extends TestdataObject {
     public TestdataMultiEntityChainVehicle(String code, int departureTime) {
         super(code);
         this.departureTime = departureTime;
-        // A head vehicle's only source is an empty fact collection,
-        // so its supplier is never triggered; initialize to the value it would compute.
-        this.previousEndTime = departureTime;
     }
 
     @ShadowSources("previousVehicles[].endTime")
     public Integer previousEndTimeSupplier() {
         previousEndTimeCalledCount++;
         var max = departureTime;
+        if (previousVehicles == null) {
+            return max;
+        }
         for (var previousVehicle : previousVehicles) {
             if (previousVehicle.getEndTime() == null) {
                 return null;
@@ -61,7 +65,11 @@ public class TestdataMultiEntityChainVehicle extends TestdataObject {
         if (visits.isEmpty()) {
             return previousEndTime;
         }
-        return visits.get(visits.size() - 1).getEndServiceTime();
+        var lastEndServiceTime = visits.getLast().getEndServiceTime();
+        if (!endTimeIncludesPreviousEndTime || lastEndServiceTime == null || previousEndTime == null) {
+            return lastEndServiceTime;
+        }
+        return Math.max(previousEndTime, lastEndServiceTime);
     }
 
     public List<TestdataMultiEntityChainVehicle> getPreviousVehicles() {
@@ -78,6 +86,10 @@ public class TestdataMultiEntityChainVehicle extends TestdataObject {
 
     public void setDepartureTime(int departureTime) {
         this.departureTime = departureTime;
+    }
+
+    public void setEndTimeIncludesPreviousEndTime(boolean endTimeIncludesPreviousEndTime) {
+        this.endTimeIncludesPreviousEndTime = endTimeIncludesPreviousEndTime;
     }
 
     public List<TestdataMultiEntityChainVisit> getVisits() {
